[gd_scene load_steps=9 format=2]

[ext_resource path="res://case_file/case_file.tscn" type="PackedScene" id=1]
[ext_resource path="res://evidence_card/evidence_card.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/pixel_font_8.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/pixel_font_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/pixel_font_10.tres" type="DynamicFont" id=5]
[ext_resource path="res://main/main.gd" type="Script" id=6]
[ext_resource path="res://fonts/pixel_font_20.tres" type="DynamicFont" id=7]
[ext_resource path="res://pause_screen/pause_screen.tscn" type="PackedScene" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_left = 140.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaseNumberLabel" type="Label" parent="."]
margin_left = 140.0
margin_top = 11.6673
margin_right = 180.0
margin_bottom = 28.6673
custom_fonts/font = ExtResource( 5 )
text = "1 of 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawButton" type="Button" parent="."]
margin_left = 256.11
margin_top = 2.68502
margin_right = 314.11
margin_bottom = 19.685
custom_fonts/font = ExtResource( 5 )
disabled = true
text = "DRAW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawsLabel" type="Label" parent="."]
margin_left = 257.394
margin_top = 16.9296
margin_right = 315.394
margin_bottom = 31.9296
custom_fonts/font = ExtResource( 5 )
text = "draws   10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrikesEmptyLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 6.0
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.498039, 0.466667, 0.466667, 1 )
text = "XXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrikesLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 6.0
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuiltyButton" type="Button" parent="."]
margin_left = 7.0
margin_top = 30.0
margin_right = 56.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "GUILTY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotGuiltyButton" type="Button" parent="."]
margin_left = 265.448
margin_top = 30.0
margin_right = 314.448
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "NOT GUILTY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaseFile" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, -150 )

[node name="EvidenceCard1" parent="." instance=ExtResource( 2 )]
position = Vector2( 13, 200 )
card_number = 1

[node name="EvidenceCard2" parent="." instance=ExtResource( 2 )]
position = Vector2( 88, 200 )
card_number = 2

[node name="EvidenceCard3" parent="." instance=ExtResource( 2 )]
position = Vector2( 163, 200 )
card_number = 3

[node name="EvidenceCard4" parent="." instance=ExtResource( 2 )]
position = Vector2( 238, 200 )
card_number = 4

[node name="Verdict" type="Node2D" parent="."]
position = Vector2( 160, 80 )

[node name="SuccessLabel" type="Label" parent="Verdict"]
visible = false
margin_left = -41.3329
margin_top = 5.0
margin_right = 49.6671
margin_bottom = 25.685
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "SUCCESS!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FailLabel" type="Label" parent="Verdict"]
visible = false
margin_left = -21.5506
margin_top = 5.31499
margin_right = 22.4494
margin_bottom = 26.315
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "FAIL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Node2D" parent="."]
position = Vector2( -80, 80 )

[node name="YouWinLabel" type="Label" parent="GameOver"]
margin_left = -44.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 23.5
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "YOU  WIN!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouLoseLabel" type="Label" parent="GameOver"]
margin_left = -50.0
margin_top = 5.0
margin_right = 61.0
margin_bottom = 23.5
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "YOU  LOSE!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="GameOver"]
margin_left = -41.0
margin_top = 29.0
margin_right = 43.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenIn" type="Tween" parent="."]

[node name="TweenOut" type="Tween" parent="."]

[node name="TweenOutDraw" type="Tween" parent="."]

[node name="TweenInDraw" type="Tween" parent="."]

[node name="TweenVerdict" type="Tween" parent="."]

[node name="TweenGameOver" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="PauseScreen" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="DrawButton" to="." method="_on_DrawButton_pressed"]
[connection signal="pressed" from="GuiltyButton" to="." method="_on_GuiltyButton_pressed"]
[connection signal="pressed" from="NotGuiltyButton" to="." method="_on_NotGuiltyButton_pressed"]
[connection signal="pressed" from="GameOver/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="tween_all_completed" from="TweenIn" to="." method="_on_TweenIn_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenOut" to="." method="_on_TweenOut_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenOutDraw" to="." method="_on_TweenOutDraw_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenInDraw" to="." method="_on_TweenInDraw_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenVerdict" to="." method="_on_TweenVerdict_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="visibility_changed" from="PauseScreen" to="." method="_on_PauseScreen_visibility_changed"]
